[project]
name = "optimization-routes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "httpx>=0.28.1",
    "polyline>=2.0.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "shapely>=2.1.2",
    "streamlit>=1.51.0",
    "streamlit-folium>=0.25.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]
